added producer and consumer